# python-structured-project

./: .pre-commit-config.yaml  404.html  NOTES.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
data/output/: output.xlsx
docs/: api.md  index.md  structure.md
search/: search_index.json
src/: __main__.py
src/pipeline/: extract.py  load.py  transform.py
structure/: index.html
tests/: test_pipeline.py
