[project]
name = "python-structured-project"
version = "0.1.0"
description = "Projeto sobre estrutura de projetos python, usando uma ETL como exemplo"
authors = [
    {name = "Juan Veronez",email = "juan.monteirov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python src"
lint = "isort . && blue ."
test = "pytest -v "
