[project]
name = "python-structured-project"
version = "0.1.0"
description = "Projeto sobre estrutura de projetos python, usando uma ETL como exemplo"
authors = [
    {name = "Juan Veronez",email = "juan.monteirov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings-python (>=1.14.2,<2.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "mkdocs-material (>=9.6.2,<10.0.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)",
    "mkdocs-bootstrap386 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python src"
lint = "isort . && blue ."
test = "pytest -v "
doc = "mkdocs serve"
